Update .gitignore to include additional patterns for Python, virtual environments, OS files, IDE settings, Streamlit cache, and data files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-.venv/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environment
+venv/
+env/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# IDE settings
+.vscode/
+.idea/
+
+# Streamlit cache
+.streamlit/
+
+# Data files (if not versioned)
+*.csv
